user-charts/admin-d/templates/network/admin-nginx-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: d-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "ddd.192.168.100.252.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
